--- a/pages/team.html
+++ b/pages/team.html
@@ -927,7 +927,7 @@
             </div>
             <div class="team-card">
                 <div class="team-photo">
-                    <img src="https://placehold.co/120x120/4f46e5/ffffff?text=V" alt="Vivek">
+                    <img src="../images/vivek.jpeg" alt="Vivek">
                 </div>
                 <h3>Er. Vivek</h3>
                 <p style="color: #a855f7; font-weight: 600;">ML Engineer</p>
