update jaiho labs pages

--- a/pages/team.html
+++ b/pages/team.html
@@ -1098,7 +1098,7 @@
             <div class="footer-section">
                 <h3>Jaiho Labs</h3>
                 <p>Where Ideas Become Intelligent Products.</p>
-                <p class="sub-brand">Powered by <a href="https://gemini.google.com/" target="_blank">Gemini</a></p>
+                <p class="sub-brand">A Division of <a href="#" target="_blank">Jaho Digital</a></p>
             </div>
             <div class="footer-section">
                 <h3>Quick Links</h3>
