--- a/index.html
+++ b/index.html
@@ -1396,7 +1396,7 @@
             <p style="color: #f8fafc; text-align: center;"><strong>Development Center:</strong> Mohali, Punjab, India</p>
             <div class="social-links" style="margin-top: 2rem;">
                 <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/JaihoDigital" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/Jaiho-Digital" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
                 <a href="#" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                 <a href="#" target="_blank" aria-label="Hugging Face" title="Hugging Face"><i class="fas fa-robot"></i></a>
             </div>
@@ -1410,16 +1410,16 @@
             <div class="footer-section">
                 <h3>Jaiho Labs</h3>
                 <p>Innovate. Build. Transform.</p>
-                <p class="sub-brand">A Division of <a href="https://jaihodigital.com" target="_blank">Jaiho Digital</a></p>
+                <p class="sub-brand">A Division of <a href="https://jaihodigital.onrender.com" target="_blank">Jaiho Digital</a></p>
             </div>
             <div class="footer-section">
                 <h3>Quick Links</h3>
-                <p><a href="#about">About Labs</a></p>
-                <p><a href="#products">Products</a></p>
-                <p><a href="#innovation-pipelines">Innovation Pipelines</a></p>
-                <p><a href="#research">Research</a></p>
+                <p><a href="pages/about.html">About Labs</a></p>
+                <p><a href="pages/products.html">Products</a></p>
+                <p><a href="pages/innovation_pipelines.html">Innovation Pipelines</a></p>
+                <p><a href="pages/research.html">Research</a></p>
                 <p><a href="#contribute">Contribute</a></p>
-                <p><a href="#team">Team</a></p>
+                <p><a href="pages/team.html">Team</a></p>
                 <p><a href="#tech-stack">Tech Stack</a></p>
                 <p><a href="#contact">Contact</a></p>
             </div>
@@ -1427,10 +1427,10 @@
                 <h3>Connect</h3>
                 <div class="footer-socials">
                     <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/Jaiho-Digital" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
                 </div>
-                <p style="margin-top: 1rem;">Email: <a href="mailto:labs@jaihodigital.com">labs@jaihodigital.com</a></p>
+                <p style="margin-top: 1rem;">Email: <a href="mailto:labs@jaihodigital.com">jaihodigital@gmail.com</a></p>
             </div>
             <div class="footer-section">
                 <h3>Newsletter</h3>
