--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,7 @@
     <section id="products" class="section">
         <h2>Our Products</h2>
         <div class="products-grid">
-            <div class="product-card">
+            <div class="product-card" data-product-id="visio-ai">
                 <div class="product-header">
                     <div class="product-logo">VA</div>
                     <h3>Visio AI</h3>
@@ -1417,11 +1417,12 @@
                 <p><a href="pages/about.html">About Labs</a></p>
                 <p><a href="pages/products.html">Products</a></p>
                 <p><a href="pages/innovation_pipelines.html">Innovation Pipelines</a></p>
-                <p><a href="pages/research.html">Research</a></p>
+                <!---<p><a href="pages/research.html">Research</a></p>-->
+                <p><a href="pages/career.html">Career</a></p>
                 <p><a href="#contribute">Contribute</a></p>
                 <p><a href="pages/team.html">Team</a></p>
                 <p><a href="#tech-stack">Tech Stack</a></p>
-                <p><a href="#contact">Contact</a></p>
+                <!--<p><a href="#contact">Contact</a></p>-->
             </div>
             <div class="footer-section">
                 <h3>Connect</h3>
