--- a/pages/products.html
+++ b/pages/products.html
@@ -918,10 +918,10 @@
     </nav>
 
     <div class="mobile-menu" id="mobileMenu">
-        <a href="index.html">Home</a>
+        <!--<a href="index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="products.html">Products</a>
-        <a href="#contact">Contact</a>
+        <a href="#contact">Contact</a>-->
     </div>
 
     <section class="page-hero">
@@ -1126,6 +1126,10 @@
                     'No-code/low-code ML model training for predictive tasks'
                 ],
                 link: '#product-detail-visio-ai' // Placeholder link
+                /*links: [
+                    { text: "Live Demo", url: "#", icon: "fas fa-external-link-alt" },
+                    { text: "GitHub Repo", url: "#", icon: "fab fa-github" }
+                ]*/
             },
             {
                 id: 'radiant-ai',
