--- a/pages/about.html
+++ b/pages/about.html
@@ -1052,10 +1052,10 @@
     </nav>
 
     <div class="mobile-menu" id="mobileMenu">
-        <a href="index.html">Home</a>
+        <!--<a href="index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="#team">Team</a>
-        <a href="#contact">Contact</a>
+        <a href="#contact">Contact</a>--->
     </div>
 
     <section class="page-hero">
