--- a/pages/career.html
+++ b/pages/career.html
@@ -964,13 +964,13 @@
     </nav>
 
     <div class="mobile-menu" id="mobileMenu">
-        <a href="index.html">Home</a>
+        <!--<a href="index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="products.html">Products</a>
         <a href="research.html">Research</a>
         <a href="team.html">Team</a>
         <a href="innovation_pipelines.html">Innovation Pipeline</a>
-        <a href="careers.html">Careers</a> <a href="#contact">Contact</a>
+        <a href="careers.html">Careers</a> <a href="#contact">Contact</a>-->
     </div>
 
     <section class="page-hero">
@@ -1076,7 +1076,7 @@
                     <li><a href="research.html">Research</a></li>
                     <li><a href="team.html">Team</a></li>
                     <li><a href="innovation_pipelines.html">Innovation Pipeline</a></li>
-                    <li><a href="careers.html">Careers</a></li>
+                    <!--<li><a href="careers.html">Careers</a></li>-->
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
