--- a/pages/innovation_pipelines.html
+++ b/pages/innovation_pipelines.html
@@ -834,12 +834,12 @@
     </nav>
 
     <div class="mobile-menu" id="mobileMenu">
-        <a href="index.html">Home</a>
+        <!--<a href="index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="products.html">Products</a>
         <a href="research.html">Research</a>
         <a href="team.html">Team</a>
-        <a href="innovation_pipeline.html">Innovation Pipeline</a> <a href="#contact">Contact</a>
+        <a href="innovation_pipeline.html">Innovation Pipeline</a> <a href="#contact">Contact</a>-->
     </div>
 
     <section class="page-hero">
