--- a/pages/research.html
+++ b/pages/research.html
@@ -898,10 +898,10 @@
     </nav>
 
     <div class="mobile-menu" id="mobileMenu">
-        <a href="index.html">Home</a>
+        <!--<a href="index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="products.html">Products</a>
-        <a href="research.html">Research</a> <a href="#contact">Contact</a>
+        <a href="research.html">Research</a> <a href="#contact">Contact</a>-->
     </div>
 
     <section class="page-hero">
