--- a/pages/team.html
+++ b/pages/team.html
@@ -890,11 +890,11 @@
     </nav>
 
     <div class="mobile-menu" id="mobileMenu">
-        <a href="index.html">Home</a>
+        <!--<a href="index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="products.html">Products</a>
         <a href="research.html">Research</a>
-        <a href="team.html">Team</a> <a href="#contact">Contact</a>
+        <a href="team.html">Team</a> <a href="#contact">Contact</a>-->
     </div>
 
     <section class="page-hero">
