--- a/index.html
+++ b/index.html
@@ -1076,7 +1076,7 @@
         <div id="particles-js"></div>
         <div class="hero-content">
             <h1>Jaiho Labs</h1>
-            <p class="tagline">Transforming cutting-edge research into real-world AI solutions that matter</p>
+            <p class="tagline">Where Ideas Become Intelligent Products</p>
             <div class="hero-buttons">
                 <a href="#products" class="btn btn-primary">Explore Products</a>
                 <button onclick="showIdeaSubmitForm()" class="btn btn-secondary">Submit Research Idea</button>
