--- a/index.html
+++ b/index.html
@@ -1414,7 +1414,7 @@
             </div>
             <div class="footer-section">
                 <h3>Quick Links</h3>
-                <p><a href="pages/about.html">About Labs</a></p>
+                <p><a href="pages/resources.html">Resources</a></p>
                 <p><a href="pages/products.html">Products</a></p>
                 <p><a href="pages/innovation_pipelines.html">Innovation Pipelines</a></p>
                 <!---<p><a href="pages/research.html">Research</a></p>-->
