--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Jaiho Labs - Where Ideas Become Intelligent Products</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Inter:wght@300;400;500;600;700;800&family=IBM+Plex+Serif:ital,wght@1,400&display=swap" rel="stylesheet">
+    <link rel="icon" href="images/favicon-32x32.png" type="image/png">
     <style>
         /* Basic Reset & Font */
         * {
@@ -77,7 +78,7 @@
             width: 45px;
             height: 45px;
             background: linear-gradient(135deg, #6366f1, #8b5cf6, #a855f7); /* Vibrant gradient for logo icon */
-            border-radius: 12px;
+            border-radius: 22px; /*12px*/
             display: flex;
             align-items: center;
             justify-content: center;
@@ -85,6 +86,13 @@
             color: white;
             font-size: 1.1rem;
             box-shadow: 0 8px 32px rgba(139, 92, 246, 0.3);
+        }
+
+        
+        .logo-img {
+        max-width: 100%;
+        max-height: 100%;
+        object-fit: contain;
         }
 
         .logo-text {
@@ -1050,7 +1058,10 @@
     <nav>
         <div class="nav-container">
             <a href="#home" class="logo">
-                <div class="logo-main">JL</div>
+                <div class="logo-main">
+                    <!--JL-->
+                    <img src="images/jaiho_labs_icon.png" alt="Logo" class="logo-img">
+                </div>
                 <span class="logo-text">Jaiho Labs</span>
             </a>
             <ul class="nav-links" id="navLinks">
