--- a/index.html
+++ b/index.html
@@ -1466,8 +1466,8 @@
                 description: "Visio AI is an advanced platform for intelligent data visualization and analytics. It leverages cutting-edge AI algorithms to automatically process complex datasets, identify patterns, and generate intuitive visual representations, making data insights accessible and actionable for businesses and researchers.",
                 tags: ["AI", "Data Science", "Streamlit", "Visualization"],
                 links: [
-                    { text: "View Demo", url: "#", icon: "fas fa-external-link-alt" },
-                    { text: "GitHub Repo", url: "#", icon: "fab fa-github" }
+                    { text: "View Demo", url: "https://visio-ai.streamlit.app", icon: "fas fa-external-link-alt" },
+                    //{ text: "GitHub Repo", url: "#", icon: "fab fa-github" }
                 ]
             },
             "spa-ai": {
@@ -1475,8 +1475,8 @@
                 description: "SPA AI is a modular and highly customizable personal AI assistant designed for seamless integration into various applications. It combines advanced Natural Language Processing (NLP) for conversational interactions with robust Computer Vision capabilities for understanding visual cues, providing a truly intelligent and versatile user experience.",
                 tags: ["NLP", "Computer Vision", "Python", "AI Assistant"],
                 links: [
-                    { text: "Live Demo", url: "#", icon: "fas fa-external-link-alt" },
-                    { text: "GitHub Repo", url: "#", icon: "fab fa-github" }
+                    { text: "Live Demo", url: "pages/coming_soon.html", icon: "fas fa-external-link-alt" },
+                    { text: "GitHub Repo", url: "https://github.com/JaihoDigital/SPA_AI", icon: "fab fa-github" }
                 ]
             },
             "fission-ai": {
@@ -1484,8 +1484,8 @@
                 description: "Fission AI is our groundbreaking multimodal AI generator that transforms textual descriptions into dynamic video content. Utilizing state-of-the-art Stable Diffusion models and advanced text-to-speech (gTTS) technology, Fission AI enables rapid prototyping and creation of narrated video clips from simple prompts, revolutionizing content generation.",
                 tags: ["Multimodal", "Text-to-Video", "Generative AI", "Stable Diffusion", "gTTS"],
                 links: [
-                    { text: "Watch Demo", url: "#", icon: "fas fa-play-circle" },
-                    { text: "Colab Notebook", url: "#", icon: "fas fa-cloud" }
+                    { text: "Watch Demo", url: "pages/coming_soon_products/under_cons.html", icon: "fas fa-play-circle" },
+                    { text: "Colab Notebook", url: "pages/coming_soon_products/under_cons.html", icon: "fas fa-cloud" }
                 ]
             },
             "gita-py": {
@@ -1493,8 +1493,8 @@
                 description: "gita-py is an AI-backed spiritual research toolkit and Python library dedicated to exploring the philosophical and ethical insights of the Bhagavad Gita. It uses advanced NLP techniques to analyze and contextualize verses, providing a unique tool for scholars, ethicists, and spiritual seekers to delve deeper into ancient wisdom.",
                 tags: ["NLP", "Ethics", "Custom AI", "Spirituality", "Python Library"],
                 links: [
-                    { text: "Visit PyPi", url: "#", icon: "fas fa-box-open" },
-                    { text: "GitHub Repo", url: "#", icon: "fab fa-github" }
+                    { text: "Visit PyPi", url: "https://pypi.org/project/gita-py/", icon: "fas fa-box-open" },
+                    { text: "GitHub Repo", url: "https://github.com/avarshvir/gita", icon: "fab fa-github" }
                 ]
             },
             "quantum-simx": {
@@ -1502,8 +1502,8 @@
                 description: "Quantum SimX is a simulated quantum processor environment designed for researchers and developers to experiment with quantum algorithms without needing access to physical quantum hardware. It provides a robust platform for simulating quantum circuits, testing quantum cryptography protocols, and exploring the potential of quantum computing.",
                 tags: ["Quantum Computing", "Research", "Simulation", "Python", "SDKs"],
                 links: [
-                    { text: "Learn More", url: "#", icon: "fas fa-info-circle" },
-                    { text: "Coming Soon", url: "#", icon: "fas fa-clock" }
+                    { text: "Learn More", url: "pages/coming_soon_products/under_cons.html", icon: "fas fa-info-circle" },
+                    { text: "Coming Soon", url: "pages/coming_soon.html", icon: "fas fa-clock" }
                 ]
             },
             "radiant-ai": {
