--- a/pages/team.html
+++ b/pages/team.html
@@ -6,6 +6,7 @@
     <title>Our Team - Jaiho Labs</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Inter:wght@300;400;500;600;700;800&family=IBM+Plex+Serif:ital,wght@1,400&display=swap" rel="stylesheet">
+    <link rel="icon" href="../images/favicon-32x32.png" type="image/png">
     <style>
         /* Basic Reset & Font */
         * {
@@ -919,10 +920,10 @@
                     <span class="tech-chip">Embedded</span>
                 </div>
                 <div class="social-links">
-                    <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="#" aria-label="Email"><i class="fas fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/in/arshvir-995a91203/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.x.com/arshvir3972" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.github.com/avarshvir" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="#" aria-label="User Profile"><i class="fas fa-user-circle"></i></a>
                 </div>
             </div>
             <div class="team-card">
@@ -937,10 +938,10 @@
                     <span class="tech-chip">Visualization</span>
                 </div>
                 <div class="social-links">
-                    <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/ivivekarya/" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="#" aria-label="Email"><i class="fas fa-envelope"></i></a>
+                    <a href="https://github.com/ivivekarya" target="_blank"><i class="fab fa-github"></i></a>
+                    <!--<a href="#" aria-label="Email"><i class="fas fa-envelope"></i></a>-->
                 </div>
             </div>
             <div class="team-card">
@@ -1024,14 +1025,14 @@
                     <img src="https://placehold.co/120x120/22c55e/ffffff?text=DK" alt="Deepak Kumar">
                 </div>
                 <h3>Deepak Kumar</h3>
-                <p class="text-lg text-green-300">Assistant Software Engineer</p>
+                <p style="color: #a855f7; font-weight: 600;">Assistant Software Engineer</p>
                 <div class="tech-stack">
                     <span class="tech-chip">Fullstack Dev</span>
                     <span class="tech-chip">API Design</span>
                 </div>
                 <div class="social-links">
-                    <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/deepak-kumar-1a09bb32a/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/kumarD869" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </div>
