--- a/pages/career.html
+++ b/pages/career.html
@@ -6,6 +6,7 @@
     <title>Careers - Jaiho Labs</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Inter:wght@300;400;500;600;700;800&family=IBM+Plex+Serif:ital,wght@1,400&display=swap" rel="stylesheet">
+    <link rel="icon" href="../images/favicon-32x32.png" type="image/png">
     <style>
         /* Basic Reset & Font */
         * {
@@ -1001,6 +1002,7 @@
         <div class="glass-card">
             <h3>A Culture of Innovation and Growth</h3>
             <p class="text-center text-gray-300 mb-6">At Jaiho Labs, we believe in fostering an environment where curiosity thrives, ideas are celebrated, and every team member contributes to groundbreaking advancements. We offer:</p>
+            <br>
             <ul>
                 <li><i class="fas fa-rocket"></i> <span>Impactful Projects: Work on cutting-edge AI, Quantum, and Software solutions that redefine industries.</span></li>
                 <li><i class="fas fa-users"></i> <span>Collaborative Environment: Join a diverse team of brilliant minds, learn from experts, and grow together.</span></li>
@@ -1009,6 +1011,7 @@
                 <li><i class="fas fa-hand-holding-heart"></i> <span>Competitive Benefits: Comprehensive health, wellness, and financial benefits package.</span></li>
                 <li><i class="fas fa-laptop-code"></i> <span>State-of-the-Art Tech: Access to the latest tools, technologies, and research facilities.</span></li>
             </ul>
+            <br>
             <p class="text-center text-gray-400 mt-6">We are committed to creating a workplace that inspires, challenges, and rewards. Come build the future with us!</p>
         </div>
     </section>
