--- a/pages/coming_soon.html
+++ b/pages/coming_soon.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Coming Soon – Jaiho Labs</title>
+  <link rel="icon" href="../images/favicon-32x32.png" type="image/png">
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       font-family: 'Rubik', sans-serif;
-      background: linear-gradient(135deg, #4A90E2, #2C3E50);
+      background: linear-gradient(135deg, #1a202C, #2C3E50);
       color: #fff;
       display: flex;
       flex-direction: column;
@@ -85,6 +86,6 @@
     <button type="submit">Notify Me</button>
   </form>
 
-  <footer>© 2025 Jaiho Labs · Built with ❤️ in India</footer>
+  <footer>© 2025 Jaiho Labs · Jaiho Digital</footer>
 </body>
 </html>
