--- a/pages/research.html
+++ b/pages/research.html
@@ -6,6 +6,7 @@
     <title>Our Research - Jaiho Labs</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Inter:wght@300;400;500;600;700;800&family=IBM+Plex+Serif:ital,wght@1,400&display=swap" rel="stylesheet">
+    <link rel="icon" href="../images/favicon-32x32.png" type="image/png">
     <style>
         /* Basic Reset & Font */
         * {
@@ -964,7 +965,7 @@
             <li class="publication-item glass-card">
                 <h4>Gita-Py: A Python Library for Philosophical Text Analysis</h4>
                 <p>Open-source project demonstrating the application of NLP techniques to extract insights and connections from ancient philosophical texts. Available on GitHub.</p>
-                <a href="#" target="_blank">Explore Project <i class="fab fa-github"></i></a>
+                <a href="https://github.com/avarshvir/gita" target="_blank">Explore Project <i class="fab fa-github"></i></a>
             </li>
             <li class="publication-item glass-card">
                 <h4>Predictive Analytics with Visio AI: Case Studies</h4>
