--- a/index.html
+++ b/index.html
@@ -1070,10 +1070,11 @@
                 <li><a href="pages/products.html">Products</a></li>
                 <!--<li><a href="#innovation-pipelines">Innovation Pipelines</a></li>-->
                 <li><a href="pages/research.html">Research</a></li>
+                <li><a href="pages/resources.html">Resources</a></li>
                 <!--<li><a href="#contribute">Contribute</a></li>-->
                 <li><a href="pages/team.html">Team</a></li>
                <!---- <li><a href="#tech-stack">Tech Stack</a></li>-->
-                <li><a href="#contact">Contact</a></li>
+                
             </ul>
             <div class="hamburger" id="hamburger">
                 <span></span>
@@ -1441,6 +1442,7 @@
                     <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/Jaiho-Digital" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="#" target="_blank" aria-label="Hugging Face" title="Hugging Face"><i class="fas fa-robot"></i></a>
                 </div>
                 <p style="margin-top: 1rem;">Email: <a href="mailto:labs@jaihodigital.com">jaihodigital@gmail.com</a></p>
             </div>
