--- a/pages/career.html
+++ b/pages/career.html
@@ -952,9 +952,10 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a href="research.html">Research</a></li>
+                <li><a href="resources.html">Resources</a></li>
                 <li><a href="team.html">Team</a></li>
                 <!--<li><a href="innovation_pipeline.html">Innovation Pipeline</a></li>-->
-                <li><a href="#contact">Contact</a></li>
+                <!--<li><a href="#contact">Contact</a></li>-->
             </ul>
             <div class="hamburger" id="hamburger">
                 <span></span>
