--- a/pages/innovation_pipelines.html
+++ b/pages/innovation_pipelines.html
@@ -6,6 +6,7 @@
     <title>Innovation Pipeline - Jaiho Labs</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Inter:wght@300;400;500;600;700;800&family=IBM+Plex+Serif:ital,wght@1,400&display=swap" rel="stylesheet">
+    <link rel="icon" href="../images/favicon-32x32.png" type="image/png">
     <style>
         /* Basic Reset & Font */
         * {
@@ -822,8 +823,9 @@
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a href="research.html">Research</a></li>
-                <li><a href="team.html">Team</a></li>
-                <li><a href="innovation_pipeline.html">Innovation Pipeline</a></li> <li><a href="#contact">Contact</a></li>
+                <li><a href="resources.html">Resources</a></li>
+                <li><a href="team.html">Team</a></li> 
+                <!--<li><a href="#contact">Contact</a></li>-->
             </ul>
             <div class="hamburger" id="hamburger">
                 <span></span>
