--- a/pages/products.html
+++ b/pages/products.html
@@ -907,8 +907,9 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="../index.html#products">Products</a></li>
                 <li><a href="research.html">Research</a></li>
+                <li><a href="resources.html">Resources</a></li>
                 <li><a href="team.html">Team</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <!--<li><a href="#contact">Contact</a></li>-->
             </ul>
             <div class="hamburger" id="hamburger">
                 <span></span>
@@ -970,7 +971,7 @@
         </div>
     </section>-->
 
-    <section id="contact" class="section">
+    <!--<section id="contact" class="section">
         <h2>Get in Touch</h2>
         <div class="glass-card contact-form">
             <h3 style="color: #a855f7; margin-bottom: 1.5rem; text-align: center;">Connect with Jaiho Labs</h3>
@@ -985,7 +986,7 @@
                 <a href="#" target="_blank" aria-label="Hugging Face" title="Hugging Face"><i class="fas fa-robot"></i></a>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <a href="#" id="floatingSubmitIdeaBtn" class="floating-submit-btn">
         Submit Your Idea
