--- a/pages/research.html
+++ b/pages/research.html
@@ -887,8 +887,9 @@
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a href="research.html">Research</a></li> 
+                <li><a href="resources.html">Resources</a></li>
                 <li><a href="team.html">Team</a></li> 
-                <li><a href="#contact">Contact</a></li>
+                <!--<li><a href="#contact">Contact</a></li>-->
             </ul>
             <div class="hamburger" id="hamburger">
                 <span></span>
