--- a/pages/resources.html
+++ b/pages/resources.html
@@ -689,10 +689,11 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="products.html">Products</a></li>
                 <li><a href="research.html">Research</a></li>
+                <li><a href="innovation_pipelines.html">Innovation Pipeline</a></li>
                 <li><a href="team.html">Team</a></li>
                 <!--<a href="innovation_pipeline.html">Innovation</a></li>-->
                 <!--<li><a href="resources.html">Resources</a></li>-->
-                <li><a href="../index.html#contact">Contact</a></li>
+                <!--<li><a href="../index.html#contact">Contact</a></li>-->
             </ul>
             <div class="hamburger" id="hamburger">
                 <span></span>
