--- a/pages/products.html
+++ b/pages/products.html
@@ -940,6 +940,8 @@
             <button class="filter-btn" data-filter="AI">AI Products</button>
             <button class="filter-btn" data-filter="Software">Software Products</button>
             <button class="filter-btn" data-filter="Quantum">Quantum Products</button>
+            <button class="filter-btn" data-filter="AI/ML/LLMs">AI/ML/LLMs</button>
+            
         </div>
         <div class="products-grid" id="productsGrid">
             </div>
@@ -1222,7 +1224,23 @@
                     'Future-proof security architecture'
                 ],
                 link: 'coming_soon_products/under_cons.html' // Placeholder link
+            },
+            {
+                id: 'sentiment-analysis-lr',
+                name: 'Sentiment-Analysis-LR Model',
+                logo: 'SA',
+                category: 'AI/ML/LLMs',
+                description: 'A powerful sentiment analysis ML model based on logistic regression. More Models of this category are soming soon like nb, sgd, rf.',
+                tags: ['AI Models', 'LLM', 'ML Model', 'Open Source', 'Sentiment Analysis', 'NLP'],
+                features: [
+                    'Sentiment Analysis Model',
+                    'Trained on Tweet Data',
+                    'Based on Logistic Regression',
+                    'More Models are coming soon with high performance'
+                ],
+                link: 'https://huggingface.co/jaiholabs/sentiment-analysis-lr' // Placeholder link
             }
+
         ];
 
         /*function showProductDetailModal(productId) {
