--- a/index.html
+++ b/index.html
@@ -1187,6 +1187,19 @@
                 </div>
                 <a href="#" class="btn btn-primary" style="margin-top: 1rem; font-size: 0.9rem;">View Product</a>
             </div>
+
+            <div class="product-card" data-product-id="more-products">
+                <div class="product-header">
+                    <div class="product-logo">MP</div>
+                    <h3>View More Product</h3>
+                </div>
+                <p>See our more Products, ML Models, AI Models, Software Products. Click on More Product button.</p>
+                <div class="tags">
+                    <span class="tag">More Products</span>
+                    <span class="tag">Softwares</span>
+                </div>
+                <a href="pages/products.html" class="btn btn-primary" style="margin-top: 1rem; font-size: 0.9rem;">View More Product</a>
+            </div>
         </div>
     </section>
 
@@ -1409,8 +1422,8 @@
             <div class="social-links" style="margin-top: 2rem;">
                 <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/Jaiho-Digital" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
-                <a href="#" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                <a href="#" target="_blank" aria-label="Hugging Face" title="Hugging Face"><i class="fas fa-robot"></i></a>
+                <a href="https://instagram.com/jaihodigital" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="https://huggingface.co/jaiholabs" target="_blank" aria-label="Hugging Face" title="Hugging Face"><i class="fas fa-robot"></i></a>
             </div>
         </div>
     </section>
@@ -1441,8 +1454,8 @@
                 <div class="footer-socials">
                     <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/Jaiho-Digital" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-                    <a href="#" target="_blank" aria-label="Hugging Face" title="Hugging Face"><i class="fas fa-robot"></i></a>
+                    <a href="https://instagram.com/jaihodigital" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://huggingface.co/jaiholabs" target="_blank" aria-label="Hugging Face" title="Hugging Face"><i class="fas fa-robot"></i></a>
                 </div>
                 <p style="margin-top: 1rem;">Email: <a href="mailto:labs@jaihodigital.com">jaihodigital@gmail.com</a></p>
             </div>
