--- a/index.html
+++ b/index.html
@@ -1105,7 +1105,7 @@
             </div>
             <div class="glass-card">
                 <h3 style="color: #06b6d4; margin-bottom: 1rem;">Research & Innovation</h3>
-                <p>Our focus spans AI, Quantum Computing, NLP, Computer Vision, and Ethical AI - pushing the boundaries of what's possible.</p>
+                <p>Our focus spans AI, Quantum Computing, NLP, Computer Vision, Software Development, BCI and Ethical AI - pushing the boundaries of what's possible.</p>
             </div>
             <div class="glass-card">
                 <h3 style="color: #10b981; margin-bottom: 1rem;">AI Excellence</h3>
@@ -1126,8 +1126,9 @@
                     <div class="product-logo">VA</div>
                     <h3>Visio AI</h3>
                 </div>
-                <p>Advanced computer vision platform for real-time analysis and intelligent visual processing.</p>
+                <p>Advanced data Science and machine learning platform for real-time analysis, intelligent visual processing and model training.</p>
                 <div class="tags">
+                    <span class="tag">AI</span>
                     <span class="tag">Data Science</span>
                     <span class="tag">Visualization</span>
                 </div>
@@ -1139,7 +1140,7 @@
                     <div class="product-logo">SA</div>
                     <h3>SPA AI</h3>
                 </div>
-                <p>Intelligent conversational assistant powered by advanced NLP and OpenCV integration.</p>
+                <p>Intelligent Personal AI Assistant powered by advanced NLP, Computer Vision integration and designed for daily task.</p>
                 <div class="tags">
                     <span class="tag">Assistant</span>
                     <span class="tag">CV</span>
@@ -1153,10 +1154,11 @@
                     <div class="product-logo">FA</div>
                     <h3>Fission AI</h3>
                 </div>
-                <p>Revolutionary multimodal AI system for automated narrated video generation and content creation.</p>
+                <p>Revolutionary multimodal generative AI system for automated narrated video generation, content creation, text generation and deep research.</p>
                 <div class="tags">
                     <span class="tag">Multimodal</span>
-                    <span class="tag">Video, Image</span>
+                    <span class="tag">Video</span>
+                    <span class="tag">Images</span>    
                 </div>
                 <a href="#" class="btn btn-primary" style="margin-top: 1rem; font-size: 0.9rem;">View Product</a>
             </div>
@@ -1208,7 +1210,7 @@
         <p style="text-align: center; color: #e2e8f0; margin-bottom: 3rem;">Our structured approach to bringing ideas from concept to market.</p>
         <div class="pipeline-grid">
             <div class="glass-card pipeline-stage-card">
-                <h3>Ideation & Research</h3>
+                <h3>Idea & Research</h3>
                 <p>Brainstorming, concept validation, and initial scientific inquiry into emerging technologies.</p>
                 <div class="tags" style="justify-content: center;">
                     <span class="tag">Brainstorming</span>
@@ -1224,7 +1226,7 @@
                 </div>
             </div>
             <div class="glass-card pipeline-stage-card">
-                <h3>Development & Refinement</h3>
+                <h3>Research, Development & Refinement</h3>
                 <p>Full-scale engineering, robust architecture design, and continuous improvement based on feedback.</p>
                 <div class="tags" style="justify-content: center;">
                     <span class="tag">Product Engineering</span>
@@ -1253,8 +1255,8 @@
         </div>
         <div class="products-grid" id="researchGrid">
             <div class="glass-card research-item" data-category="ai quantum">
-                <h3 style="color: #a855f7;">Quantum-AI Hybrid Systems</h3>
-                <p>Exploring the intersection of quantum computing and artificial intelligence for breakthrough computational capabilities.</p>
+                <h3 style="color: #a855f7;">Quantum-AI Systems</h3>
+                <p>Exploring the applications of quantum computing and artificial intelligence for breakthrough computational capabilities.</p>
                 <div class="tags">
                     <span class="tag">Qiskit</span>
                     <span class="tag">PyTorch</span>
@@ -1291,7 +1293,7 @@
         <h2>Contribute & Partner</h2>
         <div class="glass-card contact-form">
             <h3 style="margin-bottom: 2rem; color: #a855f7;"><center>Join Our Open Innovation Ecosystem</center></h3>
-            <p style="margin-bottom: 1.5rem; text-align: center; color: #e2e8f0;">We believe in the power of collective intelligence. Whether you have a groundbreaking idea, want to collaborate on a project, or are interested in partnerships, Jaiho Labs is open to innovation.</p>
+            <p style="margin-bottom: 1.5rem; text-align: center; color: #e2e8f0;">We believe in the power of creativity & intelligence. Whether you have a groundbreaking idea, want to collaborate on a project, or are interested in partnerships, Jaiho Labs is open to innovation.</p>
             <p class="quote-text" style="margin-bottom: 2rem; color: #a855f7;">“Let’s build the next AI revolution together.”</p>
             <button onclick="showIdeaSubmitForm()" class="btn btn-primary" style="width: 100%;">Submit Your Idea / Proposal</button>
             <br>
@@ -1420,7 +1422,7 @@
             <p style="color: #f8fafc; text-align: center;"><strong>Headquarters:</strong> Tanda Urmar, Punjab, India</p>
             <p style="color: #f8fafc; text-align: center;"><strong>Development Center:</strong> Mohali, Punjab, India</p>
             <div class="social-links" style="margin-top: 2rem;">
-                <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/company/jaihoailabs" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/Jaiho-Digital" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
                 <a href="https://instagram.com/jaihodigital" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                 <a href="https://huggingface.co/jaiholabs" target="_blank" aria-label="Hugging Face" title="Hugging Face"><i class="fas fa-robot"></i></a>
@@ -1435,7 +1437,7 @@
             <div class="footer-section">
                 <h3>Jaiho Labs</h3>
                 <p>Innovate. Build. Transform.</p>
-                <p class="sub-brand">A Division of <a href="https://jaihodigital.onrender.com" target="_blank">Jaiho Digital</a></p>
+                <p class="sub-brand">A Division of <a href="https://jaiho-digital.onrender.com" target="_blank">Jaiho Digital</a></p>
             </div>
             <div class="footer-section">
                 <h3>Quick Links</h3>
@@ -1452,7 +1454,7 @@
             <div class="footer-section">
                 <h3>Connect</h3>
                 <div class="footer-socials">
-                    <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/company/jaihoailabs" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://github.com/Jaiho-Digital" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="https://instagram.com/jaihodigital" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="https://huggingface.co/jaiholabs" target="_blank" aria-label="Hugging Face" title="Hugging Face"><i class="fas fa-robot"></i></a>
@@ -1478,8 +1480,8 @@
         const productData = {
             "visio-ai": {
                 title: "Visio AI",
-                description: "Visio AI is an advanced platform for intelligent data visualization and analytics. It leverages cutting-edge AI algorithms to automatically process complex datasets, identify patterns, and generate intuitive visual representations, making data insights accessible and actionable for businesses and researchers.",
-                tags: ["AI", "Data Science", "Streamlit", "Visualization"],
+                description: "Visio AI is an advanced Data Science and Machine Learning platform for intelligent data visualization, model training and analytics. It leverages cutting-edge AI algorithms to automatically process complex datasets, identify patterns, and generate intuitive visual representations, making data insights accessible and actionable for businesses and researchers.",
+                tags: ["AI", "Data Science","Machine Learning", "Visualization","No Code"],
                 links: [
                     { text: "View Demo", url: "https://visio-ai.streamlit.app", icon: "fas fa-external-link-alt" },
                     //{ text: "GitHub Repo", url: "#", icon: "fab fa-github" }
@@ -1488,7 +1490,7 @@
             "spa-ai": {
                 title: "SPA AI",
                 description: "SPA AI is a modular and highly customizable personal AI assistant designed for seamless integration into various applications. It combines advanced Natural Language Processing (NLP) for conversational interactions with robust Computer Vision capabilities for understanding visual cues, providing a truly intelligent and versatile user experience.",
-                tags: ["NLP", "Computer Vision", "Python", "AI Assistant"],
+                tags: ["NLP", "Computer Vision", "AI Assistant"],
                 links: [
                     { text: "Live Demo", url: "pages/coming_soon.html", icon: "fas fa-external-link-alt" },
                     { text: "GitHub Repo", url: "https://github.com/JaihoDigital/SPA_AI", icon: "fab fa-github" }
